Close scope2 panel after delete

--- a/records.html
+++ b/records.html
@@ -1409,6 +1409,7 @@
       if (window.renderRecords) window.renderRecords('recordsTable');
       if (window.renderCarbonSummary) window.renderCarbonSummary();
       if (window.renderCarbonReminders) window.renderCarbonReminders();
+      closePanel();
     };
 
     window.onRecordEdit = async (id) => {
