Clarify scope estimates on landing

--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
       <div class="grid-3">
         <div>
           <strong>1) You enter Scope 1, Scope 2, or Scope 3 data</strong>
-          <p class="muted">Natural gas quantity or electricity kWh, plus billing month and location.</p>
+          <p class="muted">Natural gas quantity or electricity kWh for Scopes 1–2, plus spend or vendor-reported emissions for Scope 3, with period and location.</p>
         </div>
         <div>
           <strong>2) CarbonWise applies public emission factors</strong>
@@ -445,7 +445,7 @@
         </div>
         <div>
           <strong>3) You get a clear estimate</strong>
-          <p class="muted">Scope 2 defaults to location-based, with optional market-based adjustments.</p>
+          <p class="muted">Scope 1 uses fuel quantities, Scope 2 defaults to location-based with optional market-based adjustments, and Scope 3 uses spend-based screening or vendor-reported actuals.</p>
         </div>
       </div>
     </section>
