--- a/scope3.html
+++ b/scope3.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>CarbonWise | Scope 3 Screening</title>
+  <title>CarbonWise | Scope 3 Records</title>
   <style>
     :root {
       --ink: #0f172a;
@@ -320,7 +320,7 @@
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
         <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
-        <a href="scope3.html" class="nav-item active" data-nav="scope3">Scope 3 Screening</a>
+        <a href="scope3.html" class="nav-item active" data-nav="scope3">Scope 3 Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
@@ -337,6 +337,16 @@
             <div class="summary-card">
               <div class="label">Total Scope 3</div>
               <div class="value" id="scope3Total">—</div>
+              <div class="unit">tCO2e</div>
+            </div>
+            <div class="summary-card">
+              <div class="label">Scope 3 actuals</div>
+              <div class="value" id="scope3ActualsTotal">—</div>
+              <div class="unit">tCO2e</div>
+            </div>
+            <div class="summary-card">
+              <div class="label">Scope 3 spend-based</div>
+              <div class="value" id="scope3SpendTotal">—</div>
               <div class="unit">tCO2e</div>
             </div>
             <div class="summary-card">
