--- a/records.html
+++ b/records.html
@@ -376,7 +376,7 @@
         <a href="dashboard.html" class="nav-item" data-nav="dashboard">Dashboard</a>
         <a href="scope1.html" class="nav-item" data-nav="scope1">Scope 1 Records</a>
         <a href="records.html" class="nav-item" data-nav="records">Scope 2 Records</a>
-        <a href="scope3.html" class="nav-item" data-nav="scope3">Scope 3 Screening</a>
+        <a href="scope3.html" class="nav-item" data-nav="scope3">Scope 3 Records</a>
         <a href="insights.html" class="nav-item" data-nav="insights">Insights</a>
         <a href="exports.html" class="nav-item" data-nav="export">Export / Reports</a>
         <a href="settings.html" class="nav-item" data-nav="settings">Settings</a>
