--- a/insights.html
+++ b/insights.html
@@ -194,7 +194,7 @@
         <div class="tab-header">
           <button type="button" class="tab-button active" data-tab-target="scope2">Scope 2 electricity</button>
           <button type="button" class="tab-button" data-tab-target="scope1">Scope 1 natural gas</button>
-          <button type="button" class="tab-button" data-tab-target="scope3">Scope 3 screening</button>
+          <button type="button" class="tab-button" data-tab-target="scope3">Scope 3 records</button>
         </div>
         <section class="card">
           <div class="filters">
@@ -285,27 +285,27 @@
         <div class="tab-panel" data-tab="scope3">
           <section class="card stack">
             <h3 style="margin:0;">Category contribution</h3>
-            <p class="subtitle">Scope 3 screening (tCO₂e) • Spend-based EIO only</p>
+            <p class="subtitle">Scope 3 records (tCO₂e) • Actuals + spend-based screening</p>
             <div class="ranked-list" id="scope3CategoryList"></div>
             <div class="empty" id="scope3CategoryEmpty" style="display:none;">No Scope 3 records found for this period. Add a record to include it in calculations and exports.</div>
-            <div class="note">Scope 3 emissions shown here are screening-level estimates calculated using spend-based EIO models. <a href="methodology.html#scope-3">See Methodology</a>.</div>
+            <div class="note">Scope 3 includes vendor-reported actuals and spend-based screening; screening is high-uncertainty. <a href="methodology.html#scope-3">See Methodology</a>.</div>
           </section>
 
           <section class="card stack">
             <h3 style="margin:0;">Regional contribution</h3>
-            <p class="subtitle">Scope 3 screening (tCO₂e) • Spend-based EIO only</p>
+            <p class="subtitle">Scope 3 records (tCO₂e) • Actuals + spend-based screening</p>
             <div class="ranked-list" id="scope3RegionList"></div>
             <div class="empty" id="scope3RegionEmpty" style="display:none;">No Scope 3 records found for this period. Add a record to include it in calculations and exports.</div>
-            <div class="note">Scope 3 emissions shown here are screening-level estimates calculated using spend-based EIO models. <a href="methodology.html#scope-3">See Methodology</a>.</div>
+            <div class="note">Scope 3 includes vendor-reported actuals and spend-based screening; screening is high-uncertainty. <a href="methodology.html#scope-3">See Methodology</a>.</div>
           </section>
 
           <section class="card stack">
             <h3 style="margin:0;">Data coverage</h3>
-            <p class="subtitle">Saved Scope 3 records • Screening-level only</p>
+            <p class="subtitle">Saved Scope 3 records • Actuals + screening</p>
             <div class="metric" id="scope3CoverageCount">—</div>
             <div class="subtitle" id="scope3CoverageNote">Coverage based on saved records only</div>
             <div class="empty" id="scope3CoverageEmpty" style="display:none;">No Scope 3 records found for this period. Add a record to include it in calculations and exports.</div>
-            <div class="note">Scope 3 emissions shown here are screening-level estimates calculated using spend-based EIO models. <a href="methodology.html#scope-3">See Methodology</a>.</div>
+            <div class="note">Scope 3 includes vendor-reported actuals and spend-based screening; screening is high-uncertainty. <a href="methodology.html#scope-3">See Methodology</a>.</div>
           </section>
         </div>
       </div>
