--- a/scope1.html
+++ b/scope1.html
@@ -418,6 +418,7 @@
             <div class="records-actions">
               <button class="btn secondary" id="scope1-add" type="button">Add record</button>
               <button class="btn secondary" id="scope1-bulk" type="button">Bulk add</button>
+              <span class="records-status" id="scope1-limit-status"></span>
             </div>
           </section>
           <table class="table" aria-label="Saved Scope 1 records">
